# CodeFox-CLI

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.txt  SECURITY.md  WIKI.md  action.yml  go.mod  go.sum  instruction.txt  main.go  main.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: ci.yml
cmd/: init.go  root.go
codefox/: __main__.py  clean.py  cli_manager.py  init.py  list.py  main.py  scan.py
codefox/api/: base_api.py  gemini.py  model_enum.py  ollama.py  openrouter.py  qwen.py
codefox/bots/: github_bot.py
codefox/cli/: clean.py  scan.py
codefox/prompts/: audit_system.py  prompt_template.py  promt_template.py  template.py
codefox/promts/: promt_template.py
codefox/tools/: base_tool.py  rag_tool.py
codefox/utils/: helper.py  local_rag.py  parser.py
tests/: conftest.py  test_base_api_config.py  test_clean.py  test_cli_manager.py  test_helper.py  test_local_rag.py  test_model_enum.py  test_prompt_template.py  test_scan.py
